--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <div id="load">
+        Загрузка
+    </div>
     <div class="bg" style="background-image: url(images/1.jpg);"></div>
     <div class="wrap">
         <div class="noEnter">
@@ -60,6 +63,7 @@
         </div>
     </div>
     <canvas id="canvas">Canvas is not supported in your browser.</canvas>
+
     <script src="script/main.js"></script>
 </body>
 </html>
