--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
         </div>
         <div class="start">
             <div class="start__images">
-                <img src="images/1.jpg" alt="" class="active">
-                <img src="images/2.jpg" alt="">
-                <img src="images/3.jpg" alt="">
-                <img src="images/4.jpg" alt="">
-                <img src="images/5.jpg" alt="">
-                <img src="images/6.jpg" alt="">
-                <img src="images/7.jpg" alt="">
-                <img src="images/8.jpg" alt="">
-                <img src="images/9.jpg" alt="">
-                <img src="images/10.jpg" alt="">
-                <img src="images/11.jpg" alt="">
-                <img src="images/12.jpg" alt="">
-                <img src="images/13.jpg" alt="">
-                <img src="images/14.jpg" alt="">
-                <img src="images/15.jpg" alt="">
-                <img src="images/16.jpg" alt="">
-                <img src="images/17.jpg" alt="">
-                <img src="images/18.jpg" alt="">
-                <img src="images/19.jpg" alt="">
-                <img src="images/20.jpg" alt="">
+                <img src="images/1-min.jpg" alt="" class="active">
+                <img src="images/2-min.jpg" alt="">
+                <img src="images/3-min.jpg" alt="">
+                <img src="images/4-min.jpg" alt="">
+                <img src="images/5-min.jpg" alt="">
+                <img src="images/6-min.jpg" alt="">
+                <img src="images/7-min.jpg" alt="">
+                <img src="images/8-min.jpg" alt="">
+                <img src="images/9-min.jpg" alt="">
+                <img src="images/10-min.jpg" alt="">
+                <img src="images/11-min.jpg" alt="">
+                <img src="images/12-min.jpg" alt="">
+                <img src="images/13-min.jpg" alt="">
+                <img src="images/14-min.jpg" alt="">
+                <img src="images/15-min.jpg" alt="">
+                <img src="images/16-min.jpg" alt="">
+                <img src="images/17-min.jpg" alt="">
+                <img src="images/18-min.jpg" alt="">
+                <img src="images/19-min.jpg" alt="">
+                <img src="images/20-min.jpg" alt="">
             </div>
             <div class="start__audio">
                 <div class="start__audio-img">
