--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="load">
         Загрузка
     </div>
-    <div class="bg" style="background-image: url(images/1.jpg);"></div>
+    <div class="bg" style="background-image: url(images/1-min.jpg);"></div>
     <div class="wrap">
         <div class="noEnter">
             Нажми <strong>Enter</strong>
